@@ -549,4 +549,5 @@
 - Sat Feb 16 2014 (immiimmi)
   - Added new Module "THZ" 
  
- 
+- Wed Feb 25 2014 (andreas-fey)
+  - Update on pilight module for more protocols 
